--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,5 @@
+# this should be in sync with the followed style guide: Google Style Guide for Java
+# more info at https://google.github.io/styleguide/javaguide.html
 root = true
 
 [*]
@@ -6,7 +8,7 @@ end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
-max_line_length = 120
+max_line_length = 100
 tab_width = 2
 ij_continuation_indent_size = 4
 ij_formatter_off_tag = @formatter:off
@@ -115,7 +117,8 @@ ij_java_for_statement_wrap = off
 ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = true
 ij_java_if_brace_force = always
-ij_java_imports_layout = *, |, javax.**, java.**, |, $*
+# let checkstyle guide you
+ij_java_imports_layout = unset
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
 ij_java_insert_override_annotation = true
