Update common module
- Make it import persistence module

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,4 +11,13 @@
   </parent>
 
   <artifactId>common</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.wcdevs.blog.core</groupId>
+      <artifactId>persistence</artifactId>
+      <version>${version}</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
