--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -5,10 +5,26 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>core</artifactId>
     <groupId>com.wcdevs.blog.core</groupId>
+    <artifactId>core</artifactId>
     <version>0.0.1</version>
   </parent>
 
   <artifactId>persistence</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+  </dependencies>
 </project>
