--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
     <version-com.puppycrawl.tools-checkstyle>
       8.44
     </version-com.puppycrawl.tools-checkstyle>
+
+    <!-- custom props -->
+    <checkstyle-skip>false</checkstyle-skip>
   </properties>
 
   <dependencyManagement>
@@ -39,6 +42,7 @@
   <modules>
     <module>persistence</module>
     <module>common</module>
+    <module>rest</module>
   </modules>
 
   <build>
@@ -65,6 +69,7 @@
           <failOnViolation>true</failOnViolation>
           <violationSeverity>warning</violationSeverity>
           <linkXRef>false</linkXRef>
+          <skip>${checkstyle-skip}</skip>
         </configuration>
         <executions>
           <execution>
