--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>com.wcdevs.blog.core</groupId>
       <artifactId>persistence</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
