--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+          <parameters>true</parameters>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
