--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -27,4 +27,8 @@
       <artifactId>validation-api</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <finalName>${groupId}-${artifactId}-${project.version}</finalName>
+  </build>
 </project>
