--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,4 +20,8 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <finalName>${groupId}-${artifactId}-${project.version}</finalName>
+  </build>
 </project>
