Update rest module and common module
- Add dependencies to common and persistence modules in rest module
- Add requires in rest module to common module
- Make User Service public in common module

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -17,6 +17,19 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
+    <!-- use sibling modules as compile time dependencies-->
+    <!-- they'll be copied as modules at build time-->
+    <dependency>
+      <groupId>com.wcdevs.blog.core</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.wcdevs.blog.core</groupId>
+      <artifactId>persistence</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
