--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -29,6 +29,6 @@
   </dependencies>
 
   <build>
-    <finalName>${groupId}-${artifactId}-${project.version}</finalName>
+    <finalName>${project.groupId}-${project.artifactId}-${project.version}</finalName>
   </build>
 </project>
