Update persistence module
- Update application.yml to use "public" as the default schema
- open module and add requires to spring.contenxt
- Annotate UserRepository as SB Repository
- Fix V0__create_user.sql syntax

--- a/persistence/src/main/resources/application.yml
+++ b/persistence/src/main/resources/application.yml
@@ -17,7 +17,8 @@ spring:
     enabled: true
     driver-class-name: ${spring.datasource.driver-class-name}
     encoding: UTF-8
-    default-schema: wcdevsblog
+    schemas: public
+    default-schema: public
     password: ${spring.datasource.password}
     user: ${spring.datasource.username}
     url: ${spring.datasource.url}
