Update persistence module
- Configure hibernate to escape reserved SQL keywords
- Show SQL queries in dev mode
- Do not limit user package export to only common package

--- a/persistence/src/main/resources/application-local.yml
+++ b/persistence/src/main/resources/application-local.yml
@@ -3,3 +3,5 @@ spring:
     password: wcdevspwd
     username: wcdevsu
     url: jdbc:postgresql://localhost:5432/wcdevsdb
+  jpa:
+    show-sql: true
