--- a/persistence/src/main/resources/application.yml
+++ b/persistence/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: validate
+    properties:
+      hibernate:
+        globally_quoted_identifiers: "true"
   flyway:
     connect-retries: 5
     create-schemas: true
