--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       replicas: 1
       resources:
         limits:
-          cpus: "0.50"
+          cpus: "0.80"
           memory: "512M"
     volumes:
       - wcdevs_db_data:/var/lib/postgresql/data
@@ -26,7 +26,7 @@ services:
       POSTGRES_DB: wcdevsdb
 
   wcdevs_app:
-    image: lealceldeiro/com.wcdevs.blog:core-${WCD_APP_VERSION}
+    image: lealceldeiro/com.wcdevs.blog:core-0.0.1
     ports:
       - "80:8080"
     deploy:
@@ -36,17 +36,20 @@ services:
       replicas: 1
       resources:
         limits:
-          cpus: "0.40"
-          memory: "256M"
+          cpus: "0.90"
+          memory: "512M"
     networks:
       - wcdevs_net
     depends_on:
       - wcdevs_db
     environment:
-      WCD_APP_VERSION: 0.0.1
+      POSTGRES_PASSWORD: wcdevspwd
+      POSTGRES_USER: wcdevsu
+      POSTGRES_DB: wcdevsdb
 
 networks:
   wcdevs_net:
+    driver: bridge
 
 volumes:
   wcdevs_db_data:
