--- a/persistence/src/main/resources/application.yml
+++ b/persistence/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     password: ${POSTGRES_PASSWORD}
     username: ${POSTGRES_USER}
-    url: jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+    url: jdbc:postgresql://127.0.0.1:5432/${POSTGRES_DB}
   jpa:
     generate-ddl: false
     open-in-view: false
@@ -29,6 +29,3 @@ spring:
   sql:
     init:
       mode: never
-
-server:
-  port: 8080
