--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
+        max_attempts: 10
+        delay: 7s
       replicas: 1
       resources:
         limits:
@@ -31,6 +33,7 @@ services:
       restart_policy:
         max_attempts: 10
         condition: on-failure
+        delay: 8s
       replicas: 1
       resources:
         limits:
