--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       POSTGRES_DB: wcdevsdb
 
   wcdevs_app:
-    image: lealceldeiro/com.wcdevs.blog:core-0.0.1
+    image: lealceldeiro/org.wcdevs.blog:core-0.0.1
     ports:
       - "80:8080"
     deploy:
