--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
-  <groupId>com.wcdevs.blog.core</groupId>
+  <groupId>org.wcdevs.blog.core</groupId>
   <artifactId>core</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
 
-  <description>Core resources for com.wcdevs.blog</description>
+  <description>Core resources for org.wcdevs.blog</description>
 
   <properties>
     <java.version>11</java.version>
