--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.wcdevs.blog.core</groupId>
+    <groupId>org.wcdevs.blog</groupId>
     <artifactId>core</artifactId>
     <version>0.0.1</version>
   </parent>
