--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.wcdevs.blog.core</groupId>
+    <groupId>org.wcdevs.blog</groupId>
     <artifactId>core</artifactId>
     <version>0.0.1</version>
   </parent>
@@ -14,7 +14,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.wcdevs.blog.core</groupId>
+      <groupId>org.wcdevs.blog</groupId>
       <artifactId>persistence</artifactId>
       <version>${project.version}</version>
     </dependency>
