--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,10 @@ services:
     depends_on:
       - wcdevs_db
     environment:
-      APP_DB_URL: jdbc:postgresql://wcdevs_db:5432/wcdevsdb
-      APP_DB_PASSWORD: wcdevspwd
-      APP_DB_USER: wcdevsu
-      APP_DB_DRIVER: org.postgresql.Driver
+      CORE_APP_DB_URL: jdbc:postgresql://wcdevs_db:5432/wcdevsdb
+      CORE_APP_DB_PASSWORD: wcdevspwd
+      CORE_APP_DB_USER: wcdevsu
+      CORE_APP_DB_DRIVER: org.postgresql.Driver
 
 volumes:
   wcdevs_db_data:
