--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   # configured using https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.external-config
   datasource:
-    driver-class-name: ${APP_DB_DRIVER}
-    url: ${APP_DB_URL}
-    password: ${APP_DB_PASSWORD}
-    username: ${APP_DB_USER}
+    driver-class-name: ${CORE_APP_DB_DRIVER}
+    url: ${CORE_APP_DB_URL}
+    password: ${CORE_APP_DB_PASSWORD}
+    username: ${CORE_APP_DB_USER}
   jpa:
     generate-ddl: false
     open-in-view: false
@@ -31,4 +31,4 @@ spring:
       mode: never
 
 server:
-  port: ${APP_LISTEN_PORT}
+  port: ${CORE_APP_LISTEN_PORT}
