--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -71,12 +71,12 @@ jobs:
           lsb_release -sidrc
           echo Docker Information:
           docker -v
-          docker build -t org-wcdevs-blog-core .
+          docker build -t orgwcdevsblogcore .
           echo Images:
           docker image ls
           echo "AWS CLI Info: $(aws --version)"
           aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login -u AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com
-          docker tag org-wcdevs-blog-core ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${ECR_REPO_NAME}:${DOCKER_IMAGE_TAG}
+          docker tag orgwcdevsblogcore ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${ECR_REPO_NAME}:${DOCKER_IMAGE_TAG}
           docker push ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${ECR_REPO_NAME}:${DOCKER_IMAGE_TAG}
 
       - name: Send Deployment event to queue
@@ -89,7 +89,7 @@ jobs:
           DOCKER_IMAGE_TAG: ${{ steps.dockerImageTag.outputs.tag }}
           # see https://github.com/lealceldeiro/org.wcdevs.blog.awsdeployer/blob/main/deployment-sequencer-lambda/src/index.ts#L65
         run: |
-          export EVENT_PAYLOAD="{\"commitSha\": \"$GITHUB_SHA\", \"ref\": \"main\", \"owner\": \"lealceldeiro\", \"repo\": \"org.wcdevs.blog.awsdeployer\", \"workflowId\": \"deploy-app.yml\", \"environmentName\": \"staging\", \"applicationName\": \"org-wcdevs-blog-core\", \"dockerImageTag\": \"$DOCKER_IMAGE_TAG\"}"
+          export EVENT_PAYLOAD="{\"commitSha\": \"$GITHUB_SHA\", \"ref\": \"main\", \"owner\": \"lealceldeiro\", \"repo\": \"org.wcdevs.blog.awsdeployer\", \"workflowId\": \"deploy-app.yml\", \"environmentName\": \"staging\", \"applicationName\": \"orgwcdevsblogcore\", \"dockerImageTag\": \"$DOCKER_IMAGE_TAG\"}"
           aws sqs send-message \
             --queue-url=https://sqs.${AWS_DEFAULT_REGION}.amazonaws.com/${AWS_ACCOUNT_ID}/orgwcdevsblogcore-deploymentsQueue.fifo \
             --message-group-id default \
