--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 server:
   port: ${CORE_APP_LISTEN_PORT}
 
-# https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
+# see https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
 logging:
   level:
     com:
