--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>${version-lombok}</version>
+      <version>${lombok.version}</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -38,6 +38,10 @@
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-annotations</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
       </dependency>
   </dependencies>
 
