--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,6 +20,12 @@
       <artifactId>persistence</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
