--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -18,6 +18,12 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+    </dependency>
+
     <!-- use sibling modules as compile time dependencies-->
     <!-- they'll be copied as modules at build time-->
     <dependency>
