--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,11 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <!--versions-->
-    <version-org.apache.maven.plugins-maven-checkstyle-plugin>
+    <org.apache.maven.plugins-maven-checkstyle-plugin.version>
       3.1.2
-    </version-org.apache.maven.plugins-maven-checkstyle-plugin>
-    <version-com.puppycrawl.tools-checkstyle>
-      8.44
-    </version-com.puppycrawl.tools-checkstyle>
+    </org.apache.maven.plugins-maven-checkstyle-plugin.version>
+    <com.puppycrawl.tools-checkstyle.version>8.44</com.puppycrawl.tools-checkstyle.version>
+    <mockito.version>4.0.0</mockito.version>
 
     <!-- custom props -->
     <checkstyle-skip>false</checkstyle-skip>
@@ -45,14 +44,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${version-org.apache.maven.plugins-maven-checkstyle-plugin}</version>
+        <version>${org.apache.maven.plugins-maven-checkstyle-plugin.version}</version>
         <dependencies>
           <!-- upgrade checkstyle version at runtime-->
           <!-- https://maven.apache.org/plugins/maven-checkstyle-plugin/examples/upgrading-checkstyle.html -->
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>${version-com.puppycrawl.tools-checkstyle}</version>
+            <version>${com.puppycrawl.tools-checkstyle.version}</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -91,6 +90,26 @@
             </path>
           </annotationProcessorPaths>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.7</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <!-- attached to Maven test phase -->
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
