--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -51,6 +51,13 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - name: Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./persistence/target/site/jacoco/jacoco.xml,./common/target/site/jacoco/jacoco.xml,./rest/target/site/jacoco/jacoco.xml
+          fail_ci_if_error: true
+          verbose: true
+
       - name: Create Docker image tag
         if: github.ref == 'refs/heads/main'
         id: dockerImageTag
