--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
 
     <!-- use sibling modules as compile time dependencies-->
     <!-- they'll be copied as modules at build time-->
