--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -35,7 +35,7 @@ server:
 
 management:
   server:
-    port: 8082
+    port: ${CORE_APP_MANAGEMENT_PORT}
   endpoints:
     web:
       base-path: "/manage"
