--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
       <!-- https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#basic-setup -->
       <dependency>
         <groupId>io.awspring.cloud</groupId>
+        <artifactId>spring-cloud-aws-dependencies</artifactId>
+        <version>${spring-cloud-aws.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.awspring.cloud</groupId>
         <artifactId>spring-cloud-starter-aws</artifactId>
         <version>${spring-cloud-aws.version}</version>
       </dependency>
