--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <version>0.0.1</version>
   <packaging>pom</packaging>
 
-  <description>Core resources for org.wcdevs.blog</description>
+  <description>Core resources for org.wcdevs</description>
 
   <properties>
     <java.version>11</java.version>
