--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -39,6 +39,10 @@ management:
   endpoints:
     web:
       base-path: "/manage"
+  metrics:
+    export:
+      cloudwatch:
+        enabled: false
 
 # see https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
 logging:
