Update aws app config
- Add resource server issuer uri in application-aws.yml

--- a/rest/src/main/resources/application-aws.yml
+++ b/rest/src/main/resources/application-aws.yml
@@ -11,6 +11,9 @@ spring:
             clientName: ${COGNITO_CLIENT_NAME}
             clientSecret: ${COGNITO_CLIENT_SECRET}
             scope: openid, profile, address, email, phone
+      resourceserver:
+        jwt:
+          issuer-uri: ${COGNITO_PROVIDER_URL}
 cloud:
   aws:
     region:
