Add CORS config

--- a/rest/src/main/resources/application-local.yml
+++ b/rest/src/main/resources/application-local.yml
@@ -22,3 +22,7 @@ spring:
         jwt:
           # see http://localhost:8888/auth/realms/wcdevs/.well-known/openid-configuration
           issuerUri: http://localhost:8888/auth/realms/wcdevs
+
+core-app:
+  allowedOrigins:
+    - "/**"
