--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <!--versions-->
+    <spring.version>2.5.6</spring.version>
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
     <spring-cloud-aws.version>2.3.2</spring-cloud-aws.version>
+    <javax.servlet.version>2.5</javax.servlet.version>
 
     <!-- custom props -->
     <checkstyle-skip>false</checkstyle-skip>
@@ -44,6 +46,11 @@
         <groupId>io.awspring.cloud</groupId>
         <artifactId>spring-cloud-starter-aws</artifactId>
         <version>${spring-cloud-aws.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>${javax.servlet.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -102,6 +109,11 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
+              <version>${spring.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
