--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -66,6 +66,16 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-cognitoidp</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+
 
     <!-- use sibling modules as compile time dependencies-->
     <!-- they'll be copied as modules at build time-->
