--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -44,6 +44,9 @@ management:
       cloudwatch:
         enabled: false
 
+core-app:
+  allowedOrigins: ${ALLOWED_ORIGINS}
+
 # see https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#amazon-sdk-configuration
 logging:
   level:
