--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,19 @@ services:
       POSTGRES_USER: wcdevsu
       POSTGRES_DB: wcdevsdb
 
+  keycloak:
+    image: jboss/keycloak:15.0.2
+    ports:
+      - "8888:8080"
+    environment:
+      - PORT_KEYCLOAK=8080
+      - KEYCLOAK_USER=keycloak
+      - KEYCLOAK_PASSWORD=keycloak
+      - DB_VENDOR=h2
+      - JAVA_OPTS= -Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/tmp/wcdevs-realm.json
+    volumes:
+      - ./appmocks/wcdevs-realm.json:/tmp/wcdevs-realm.json
+
   wcdevs_app:
     image: org.wcdevs.blog:core
     ports:
@@ -39,6 +52,7 @@ services:
           memory: "1024M"
     depends_on:
       - wcdevs_db
+      - keycloak
     environment:
       CORE_APP_DB_URL: jdbc:postgresql://wcdevs_db:5432/wcdevsdb
       CORE_APP_DB_PASSWORD: wcdevspwd
