--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,44 @@
   <version>0.0.1</version>
   <packaging>pom</packaging>
 
-  <description>Core resources for org.wcdevs.blog</description>
+  <description>Core resources for org.wcdevs</description>
 
   <properties>
     <java.version>11</java.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <!--versions-->
-    <org.apache.maven.plugins-maven-checkstyle-plugin.version>
-      3.1.2
-    </org.apache.maven.plugins-maven-checkstyle-plugin.version>
-    <com.puppycrawl.tools-checkstyle.version>8.45.1</com.puppycrawl.tools-checkstyle.version>
+    <spring.version>2.5.6</spring.version>
+    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+    <spring-cloud-aws.version>2.3.2</spring-cloud-aws.version>
+    <javax.servlet.version>2.5</javax.servlet.version>
 
     <!-- custom props -->
     <checkstyle-skip>false</checkstyle-skip>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <!-- https://docs.awspring.io/spring-cloud-aws/docs/2.3.2/reference/html/index.html#basic-setup -->
+      <dependency>
+        <groupId>io.awspring.cloud</groupId>
+        <artifactId>spring-cloud-aws-dependencies</artifactId>
+        <version>${spring-cloud-aws.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.awspring.cloud</groupId>
+        <artifactId>spring-cloud-starter-aws</artifactId>
+        <version>${spring-cloud-aws.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>${javax.servlet.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <modules>
     <module>persistence</module>
@@ -43,14 +66,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${org.apache.maven.plugins-maven-checkstyle-plugin.version}</version>
+        <version>${maven-checkstyle-plugin.version}</version>
         <dependencies>
           <!-- upgrade checkstyle version at runtime-->
           <!-- https://maven.apache.org/plugins/maven-checkstyle-plugin/examples/upgrading-checkstyle.html -->
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>${com.puppycrawl.tools-checkstyle.version}</version>
+            <version>8.44</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -86,6 +109,11 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
+              <version>${spring.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
