--- a/rest/src/main/resources/application-aws.yml
+++ b/rest/src/main/resources/application-aws.yml
@@ -27,6 +27,4 @@ cloud:
       auto: false
 
 core-app:
-  allowedOrigins:
-    # TODO: update to restrict only to some origins
-    - "/**"
+  allowedOrigins: ${ALLOWED_ORIGINS}
