--- a/rest/src/main/resources/application-aws.yml
+++ b/rest/src/main/resources/application-aws.yml
@@ -26,6 +26,8 @@ cloud:
     stack:
       auto: false
 
-core-app:
+coreApp:
   # https://github.com/spring-projects/spring-boot/wiki/Relaxed-Binding-2.0#list-types-1
-  allowedOrigins: ${ALLOWED_ORIGINS}
+  # updated at runtime
+  allowedOrigins:
+    - "https://wcdevs.org"
