Revert "Update application-aws.yml"
This reverts commit 787809f736be6211f6c363f6edf3373f3fc74a99.

--- a/rest/src/main/resources/application-aws.yml
+++ b/rest/src/main/resources/application-aws.yml
@@ -26,8 +26,6 @@ cloud:
     stack:
       auto: false
 
-coreApp:
+core-app:
   # https://github.com/spring-projects/spring-boot/wiki/Relaxed-Binding-2.0#list-types-1
-  # updated at runtime
-  allowedOrigins:
-    - "https://wcdevs.org"
+  allowedOrigins: ${ALLOWED_ORIGINS}
